[package]
edition = "2021"
name = "ngrok-nodejs"
version = "0.9.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-rustls = { version = "0.3.0" }
async-trait = "0.1.59"
bytes = "1.3.0"
futures = "0.3.26"
lazy_static = "1.4.0"
# pin mio until all dependencies are also on windows-sys 0.48
# https://github.com/microsoft/windows-rs/issues/2410#issuecomment-1490802715
mio = { version = "=0.8.6" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.1", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.12.1"
ngrok = { version = "0.14.0-pre.8" }
parking_lot = "0.12.1"
regex = "1.9.5"
rustls-pemfile = "1.0.1"
tokio = { version = "1.23.0", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.4.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
