[package]
edition = "2021"
name = "ngrok-javascript"
version = "1.5.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.59"
bytes = "1.3.0"
futures = "0.3.26"
lazy_static = "1.4.0"
# pin mio until all dependencies are also on windows-sys 0.48
# https://github.com/microsoft/windows-rs/issues/2410#issuecomment-1490802715
mio = { version = "=0.8.6" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.1", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.12.1"
ngrok = {version = "0.15.0", features = ["hyper", "axum"]}
parking_lot = "0.12.1"
regex = "1.9.5"
rustls = "0.23.25"
rustls-pemfile = "2.0.0"
tokio = { version = "1.23.0", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.4.0"
aws-lc-rs = "=1.13.0"
[target.'cfg(target_os = "android")'.dependencies]
aws-lc-sys = { version = "0.28.0", default-features = false }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true

[package.metadata.cargo-udeps.ignore]
normal = ["mio"]
